--- a/index.html
+++ b/index.html
@@ -85,6 +85,6 @@
         </tr>
     </table>
     
-    <script src="javascript.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
