--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRUD-JS</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
     <table>
@@ -14,51 +15,27 @@
                 <form onsubmit="event.preventDefault();onFormSubmit();" autocomplete="off">
                     <div>
                         <label for="nome">Nome</label>
-                        <input 
-                        type="text" 
-                        name="nome" 
-                        id="nome" 
-                        placeholder="Nome">
+                        <input type="text" name="nome" id="nome" placeholder="Nome">
                     </div>
                     <div>
                         <label for="publicações">Publicações</label>
-                        <input 
-                        type="number" 
-                        name="publicações" 
-                        id="publicações" 
-                        placeholder="Publicações">
+                        <input type="number" name="publicações" id="publicações" placeholder="Publicações">
                     </div>
                     <div>
                         <label for="videos">Videos</label>
-                        <input 
-                        type="number" 
-                        name="videos" 
-                        id="videos" 
-                        placeholder="Videos">
+                        <input type="number" name="videos" id="videos" placeholder="Videos">
                     </div>
                     <div>
                         <label for="horas">Horas</label>
-                        <input 
-                        type="number" 
-                        name="horas" 
-                        id="horas" 
-                        placeholder="Horas">
+                        <input type="number" name="horas" id="horas" placeholder="Horas">
                     </div>
                     <div>
                         <label for="revisitas">Revisitas</label>
-                        <input 
-                        type="number" 
-                        name="revisitas "
-                        id="revisitas" 
-                        placeholder="Revisitas">
+                        <input type="number" name="revisitas" id="revisitas" placeholder="Revisitas">
                     </div>
                     <div>
                         <label for="estudos">Estudos</label>
-                        <input 
-                        type="number" 
-                        name="estudos" 
-                        id="estudos" 
-                        placeholder="Estudos">
+                        <input type="number" name="estudos" id="estudos" placeholder="Estudos">
                     </div>
                     <div class="form-action-buttons">
                         <input type="submit" value="Submit">
@@ -84,6 +61,6 @@
             </th>           
         </tr>
     </table>    
-    <script src="script.js"></script>
+
 </body>
 </html>
