index deu pau, arrumei de novo

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </form>
             </th>
             <th>
-                <table class="list" id="list">
+                <table class="list" id="tabela">
                     <thead>
                         <tr>
                             <th>Nome</th>
